# amuse-editor

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  generate_icons.py  imgui.ini
.github/workflows/: cmake-multi-platform.yml
data/: cmake_content.txt
data/templates/: cmake_game.txt  component.cpp  component.hpp  components.cpp  components.hpp
include/: create_project.hpp  custom_inspector.hpp  debug_component.hpp  icons.hpp  templates.hpp
include/editor/: custom_inspector.hpp  editor.hpp  editor_window.hpp  style.hpp  ui.hpp
include/editor/windows/: components.hpp  console.hpp  files.hpp  hierarchy.hpp  inspector.hpp  preferences.hpp  scene.hpp
include/inspectors/: transform.hpp
include/visual_editor/: visual_component.hpp  visual_node.hpp
src/: create_project.cpp  debug_component.cpp  icons.cpp  loader.cpp  main.cpp  templates.cpp
src/editor/: editor.cpp  editor_window.cpp  style.cpp  ui.cpp
src/editor/windows/: components.cpp  console.cpp  files.cpp  hierarchy.cpp  inspector.cpp  preferences.cpp  scene.cpp
src/inspectors/: transform.cpp
src/visual_editor/: visual_component.cpp  visual_node.cpp
window_build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  AmuseEditor.sln  AmuseEditor.vcxproj  AmuseEditor.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
window_build/AmuseEditor.dir/Debug/: AmuseEditor.exe.recipe
window_build/AmuseEditor.dir/Debug/AmuseEditor.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
window_build/core/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  AmuseCore.sln  AmuseCore.vcxproj  AmuseCore.vcxproj.filters  cmake_install.cmake
window_build/core/AmuseCore.dir/Debug/: AmuseCore.dll.recipe
window_build/core/AmuseCore.dir/Debug/AmuseCore.tlog/: AmuseCore.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
window_build/core/Debug/: AmuseCore.exp
window_build/data/core/: .gitignore  .gitmodules  CMakeLists.txt
window_build/data/core/include/: core.hpp  dll.hpp  logger.hpp
window_build/data/core/include/core/: actor.hpp  asset_manager.hpp  component.hpp  component_registry.hpp  engine.hpp  event_system.hpp  gfx.hpp  graphic_manager.hpp  input.hpp  key_code.hpp  math.hpp  window.hpp
window_build/data/core/include/core/components/: missing_component.hpp  transform.hpp
window_build/data/core/include/core/gfx/: gl.hpp  mesh.hpp  shader.hpp  texture.hpp  wire_batch.hpp
window_build/data/core/include/imgui/: imconfig.h
window_build/data/core/include/imgui/backends/: imgui_impl_opengl3.h  imgui_impl_sdl2.h
window_build/data/core/src/: logger.cpp  types.cpp
window_build/data/core/src/core/: actor.cpp  asset_manager.cpp  component.cpp  component_registry.cpp  engine.cpp  graphic_manager.cpp  input.cpp  mat4.cpp  quat.cpp  window.cpp
window_build/data/core/src/core/components/: transform.cpp
window_build/data/core/src/core/gfx/: gl.cpp  mesh.cpp  shader.cpp  texture.cpp  wire_batch.cpp
window_build/data/core/src/glad/: glad.cpp
window_build/data/core/src/imgui/: imgui_demo.cpp  imgui_draw.cpp  imgui_tables.cpp  imgui_widgets.cpp
window_build/data/core/src/imgui/backends/: imgui_impl_opengl3.cpp  imgui_impl_sdl2.cpp
window_build/data/core/src/imgui/misc/cpp/: imgui_stdlib.cpp
window_build/data/templates/: cmake_components.txt
window_build/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
window_build/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog
window_build/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
window_build/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
